examples/errors/break_outside_loop.ign
<program>
  <if condition={2<5}>
    <break/>
  </if>
</program>